[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cavityscope"
version = "0.1.0"
description = "Scanning Fabry-Perot cavity analysis: Vpi sweeps and sideband extraction"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "tqdm",
    "hardwarelib @ git+https://github.com/beneaze/hardwarelib.git",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "jupyterlab"]

[tool.setuptools.packages.find]
include = ["cavityscope*"]
